--- a/client/src/components/chatList/chatList.css
+++ b/client/src/components/chatList/chatList.css
@@ -11,6 +11,7 @@
     border-radius: 5px;
     margin: 20px 0px;
   }
+
   .title {
     font-weight: 600;
     font-size: 10px;
@@ -20,7 +21,7 @@
   .list {
     display: flex;
     flex-direction: column;
-    overflow-y: scroll;
+    overflow: scroll;
   }
 
   a {
@@ -31,6 +32,7 @@
       background-color: #2c2937;
     }
   }
+
   .upgrade {
     margin-top: auto;
     display: flex;
@@ -42,6 +44,7 @@
       width: 24px;
       height: 24px;
     }
+
     .texts {
       display: flex;
       flex-direction: column;
@@ -50,6 +53,7 @@
         &:first-child {
           font-weight: 600;
         }
+
         &:last-child {
           color: #888;
         }
