--- a/client/src/routes/homePage/homePage.css
+++ b/client/src/routes/homePage/homePage.css
@@ -29,6 +29,7 @@
         font-size: 64px;
       }
     }
+
     h3 {
       font-weight: 400;
       max-width: 70%;
@@ -52,6 +53,7 @@
       }
     }
   }
+
   .right {
     flex: 1;
     display: flex;
@@ -87,12 +89,14 @@
           animation: 8s ease-in-out alternate slideBg;
         }
       }
+
       .bot {
         width: 100%;
         height: 100%;
         object-fit: contain;
         animation: 3s ease-in-out infinite alternate botAnimate;
       }
+
       .chat {
         position: absolute;
         bottom: -30px;
@@ -101,7 +105,7 @@
         align-items: center;
         gap: 10px;
         padding: 20px;
-        border-color: #2c2937;
+        background-color: #2c2937;
         border-radius: 10px;
 
         @media screen and (max-width: 1024px) {
@@ -120,6 +124,7 @@
       }
     }
   }
+
   .orbital {
     position: absolute;
     bottom: 0;
@@ -152,6 +157,7 @@
     }
   }
 }
+  
 @keyframes rotateOrbital {
   0% {
     transform: rotate(0deg);
