--- a/client/src/index.css
+++ b/client/src/index.css
@@ -1,3 +1,7 @@
+@tailwind base;
+@tailwind components;
+@tailwind utilities;
+
 * {
   padding: 0;
   margin: 0;
@@ -12,4 +16,10 @@ body {
 a {
   text-decoration: none;
   color: inherit;
+}
+.option {
+  @apply flex-1 flex flex-col gap-3 font-light text-sm p-5 border border-[#555] rounded-2xl;
+}
+.option-img {
+  @apply w-10 h-10;
 }
