--- a/client/src/routes/chatPage/chatPage.css
+++ b/client/src/routes/chatPage/chatPage.css
@@ -7,7 +7,7 @@
 
   .wrapper {
     flex: 1;
-    overflow: scroll;
+    overflow: auto;
     width: 100%;
     display: flex;
     justify-content: center;
@@ -18,8 +18,9 @@
       flex-direction: column;
       gap: 20px;
 
-      p, li {
-        margin: 10px 0px; 
+      p,
+      li {
+        margin: 10px 0px;
       }
 
       .message {
