--- a/client/src/index.css
+++ b/client/src/index.css
@@ -23,7 +23,7 @@ a {
   color: transparent;
 }
 .option {
-  @apply flex-1 flex flex-col gap-3 font-light text-sm p-5 border border-[#555] rounded-2xl;
+  @apply flex-1 flex flex-col items-center gap-3 font-light text-sm py-5  border border-[#555] rounded-2xl;
 }
 .option-img {
   @apply w-10 h-10;
